--- a/URDiningApp/src/main/res/layout/activity_main.xml
+++ b/URDiningApp/src/main/res/layout/activity_main.xml
@@ -1,15 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-    <ExpandableListView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"/>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context=".MainActivity" >
 
-    <TextView
+    <ListView
+        android:id="@+id/list"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:text="No items"/>
-</LinearLayout>
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_above="@+id/getfood"
+        tools:listitem="@android:layout/simple_list_item_2" />
+
+    <Button
+        android:id="@+id/getfood"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Get Food"
+        android:layout_alignTop="@+id/getevents"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="53dp" />
+
+    <Button
+        android:id="@+id/getevents"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Get Events"
+        android:layout_marginBottom="22dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/list"
+        android:layout_marginRight="38dp" />
+
+</RelativeLayout>
